--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="title_acercade">Acerca de MemoryCoconut</string>
     <string name="menu_ayuda">Ayuda</string>
     <string name="content_ayuda">Cómo usar MemoryCononut</string>
+    <string name="title_ayuda">Ayuda</string>
 </resources>
 
