Batido de Coco con imagen

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="menu_ayuda">Ayuda</string>
     <string name="content_ayuda">Cómo usar MemoryCononut</string>
     <string name="title_ayuda">Ayuda</string>
+    <string name="button_batido">¡BATIDO DE COCO!</string>
 </resources>
 
