--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="body">Descripción</string>
     <string name="confirm">Confirmar</string>
     <string name="edit_note">Editar nota</string>
+    <string name="view_note">Tu recocordatorio</string>
     <string name="email">E-mail</string>
     <string name="hello">Hola Cococola</string>
     <string name="alert">¿Está seguro que quiere eliminar este recocordatorio?</string>
